found trailing comma

--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "1.0.0",
   "description": "Zoher's to do app using React client-side framework",
   "main": "server.js",
+  "engines": {
+    "node": "5.4.1",
+    "npm": "3.5.3"
+  },
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "path": "^0.12.7",
-    "react-contenteditable": "^1.1.0",
+    "react-contenteditable": "^1.1.0"
   },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "author": "Zoher Ghadyali",
   "license": "ISC"
